# rust_log_view_kit

./: README.md
android/GDLogViewKit/: build.gradle  consumer-rules.pro
android/GDLogViewKit/src/main/: AndroidManifest.xml
android/GDLogViewKit/src/main/java/com/gaoding/log/view/kit/: GDLogViewKit.java
gaoding-log-view-kit/: Cargo.toml  cargo-config.toml
gaoding-log-view-kit/src/: lib.rs
gd_log_view_server/: Cargo.toml
gd_log_view_server/src/: main.rs
ios/GDLogViewKit/: GDLogViewKit.podspec  LICENSE
ios/GDLogViewKit/GDLogViewKit/Classes/: GDLogViewKit.h  GDLogViewKit.m  api.h
