[package]
name = "gaoding-log-view-kit"
version = "0.1.0"
edition = "2021"
authors = ["yuanxiao <yuanxiao@gaoding.com>"]
description = "Gaoding log view kit for iOS、Android、Web and so on."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.20.0", default-features = false }

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
ws = "0.9.2"
